Refactor pet skill lore, fix triggers, and standardize permissions
Changelog:
- Refactored skill configurations to be human-readable in GUI, with descriptive lore and proper spacing.
- Added support for user-friendly trigger names in GUI.
- Fixed an issue where pets would not auto-spawn on reload/join due to an outdated permission check.
- Added permission check to ride pet via interaction.
- Updated all permission nodes to consistently use the 'sincepet.' prefix (e.g., sincepet.ride, sincepet.skill).
- Cleaned up documentation markdown to reflect new permissions.

IMPORTANT: Please delete your old SincePet folder in your plugins directory to generate the new updated configuration files!